progress(ch3): start

--- a/main.tex
+++ b/main.tex
@@ -95,4 +95,8 @@
 \chapter{Data Transmission}
 \subfile{chapters/2_data_transmission}
 
+\chapter{Hardware}
+\subfile{chapters/3_hardware}
+
+
 \end{document}
