--- a/sections/3/input_and_output_devices.tex
+++ b/sections/3/input_and_output_devices.tex
@@ -1,5 +1,5 @@
 \documentclass[../main.tex]{subfiles}
-\graphicspath{{\subfix{../../images/}}}
+\graphicspath{{\subfix{../images/}}}
 
 \begin{document}
 
