progress(ch3), begin ch4

--- a/sections/2/ip_and_mac_addresses.tex
+++ b/sections/2/ip_and_mac_addresses.tex
@@ -138,7 +138,7 @@ Some organizations, such as mainframe or cluster computers, require MAC addresse
 
 \emph{Extra: LAA addresses also have a property where the 7th bit of the 1st byte of the MAC address is set to 1. UAA addresses have that bit set to 0.}
 
-\subsection{Difference between IP and MAC addresses}
+\subsection{Differences between IP and MAC addresses}
 
 \begin{longtable}{|p{0.4\textwidth}|p{0.4\textwidth}|}
     \hline 
