--- a/main.tex
+++ b/main.tex
@@ -101,4 +101,23 @@
 \chapter{Software}
 \subfile{chapters/4_software}
 
+\chapter{The Internet and Its Uses}
+\subfile{chapters/5_the_internet_and_its_uses.tex}
+
+\chapter{Emerging Technologies}
+\subfile{chapters/6_emerging_technologies}
+
+\chapter{Algorithms and Problem Solving}
+\subfile{chapters/7_algorithms_and_problem_solving.tex}
+
+\chapter{Programming}
+\subfile{chapters/8_programming.tex}
+
+\chapter{Databases}
+\subfile{chapters/9_databases.tex}
+
+\chapter{Boolean Logic}
+\subfile{chapters/10_boolean_logic}
+
+
 \end{document}
