--- a/sections/3/von_neumann.tex
+++ b/sections/3/von_neumann.tex
@@ -124,7 +124,7 @@ There is a great video by Tom Scott on this, watch it \href{https://www.youtube.
 
 \begin{figure}[H]
     \centering
-    \includegraphics{crystal_clock.png}
+    \includegraphics[width=0.4\textwidth]{crystal_clock.png}
     \caption{A crystal clock generator, which generates electrical pulses.}
     \label{fig:crystal_clock}
 \end{figure}
@@ -145,6 +145,8 @@ Cores are like Sub-CPUs in each CPU. Each CPU shown in figure \ref{fig:cpus} has
 \end{figure}
 
 Each core talks to each other, and every core can communicate with every other core. They are bound together tightly in the CPU; knowing exactly how they communicate is not a part of the syllabus and is too complicated to break down.
+
+There are some special names for multi-core CPUs with lower core counts. \textbf{Quad core CPUs} have 4 cores. \textbf{Dual core CPUs} have 2 cores. \textbf{Single core CPUs} have 1 core, as per the name.
 
 \subsection{Increasing CPU speed}
 
